@@ -18,7 +18,7 @@ export type Theme = {
   execCommand? (command: string, ui?: boolean, value?: any): boolean;
   destroy? (): void;
   init? (editor: Editor, url: string, $: DomQueryConstructor);
-  renderUI? (): { iframeContainer?: HTMLIFrameElement; editorContainer: HTMLElement; api?: EditorUiApi };
+  renderUI? (): { iframeContainer?: HTMLIFrameElement; editorContainer: HTMLElement; api?: Partial<EditorUiApi> };
   getNotificationManagerImpl? (): NotificationManagerImpl;
   getWindowManagerImpl? (): WindowManagerImpl;
 };
