@@ -16,6 +16,8 @@ type Registry = BridgeRegistry.Registry;
 export interface EditorUiApi {
   show: () => void;
   hide: () => void;
+  enable: () => void;
+  disable: () => void;
 }
 
 export interface EditorUi extends EditorUiApi {
